prevent unnecessary scrollbars on <code>s inside <pre>s

--- a/src/app.css
+++ b/src/app.css
@@ -13,10 +13,10 @@
         @apply font-bold;
     }
     .prose pre {
-        @apply p-0 bg-neutral-100 text-inherit text-sm;
+        @apply p-0 overflow-x-auto bg-neutral-100 text-inherit text-sm;
     }
     .prose pre code {
-        @apply block p-5 overflow-x-auto bg-neutral-100 text-inherit whitespace-pre !important;
+        @apply block p-5 overflow-x-visible bg-neutral-100 text-inherit whitespace-pre !important;
     }
     .prose h1 {
         @apply mb-0;
